opam-version: "2.0"
maintainer: "Christophe Troestler <Christophe.Troestler@umons.ac.be>"
authors: [ "Christophe Troestler" ]
license: "LGPL-3 with OCaml linking exception"
homepage: "https://github.com/Chris00/color_brewery"
dev-repo: "git+https://github.com/Chris00/color_brewery.git"
bug-reports: "https://github.com/Chris00/color_brewery/issues"
doc: "https://Chris00.github.io/color_brewery/doc"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"
  "gg"
  "dune" {build}
]
